crates/solidity/testing/snapshots/bindings_output/libraries/modifiers_scope/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:2:25]
   │
 2 │   error IndexOutOfBounds();
   │                         ─┬  
   │                          ╰── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:5:28]
   │
 5 │     revert IndexOutOfBounds();
   │                            ─┬  
   │                             ╰── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ library Lib {
   │         ─┬─  
   │          ╰─── def: 1
 2 │   error IndexOutOfBounds();
   │   ──┬── ────────┬───────  
   │     ╰───────────────────── unresolved
   │                 │         
   │                 ╰───────── def: 2
   │ 
 4 │   modifier test() {
   │            ──┬─  
   │              ╰─── def: 3
 5 │     revert IndexOutOfBounds();
   │     ───┬── ────────┬───────  
   │        ╰───────────────────── ref: built-in
   │                    │         
   │                    ╰───────── def: 4
───╯
